# Quadruped-PyMPC

./: config.py
gradient/nominal/: centroidal_nmpc_nominal.py
helpers/: mcts.py  other.py  srb_inertia_computation.py  swing_trajectory_controller.py
helpers/swing_generators/: scipy_swing_trajectory_generator.py  scipy_swing_trajectory_generator_mcts.py
installation/mamba/integrated_gpu/: mamba_environment.yml
installation/mamba/nvidia_cuda/: mamba_environment.yml
mcts/: CMakeLists.txt  batch.py  mcts.cpp  mcts.hpp  pywrap.cpp  test.py
mcts/structs/: node.hpp  state.hpp
simulation/: simulation_mujoco.py  simulation_mujoco_mcts.py
